packages/cashc/test/compiler/ParseError/multiple_trailing_comma.cash
contract Contract(
    pubkey ownerPk,
    pubkey oraclePk,
) {
    return {
        spend(
            sig ownerSig,
            datasig oracleMsgSig,
            sig oracleTxSig,
        ) {
            bytes oracleMessage = bytes('Spend') + bytes(12, 10,);
            require(checkDataSig(
                oracleMsgSig,
                oracleMessage,
                oraclePk,,,
            ));
            require(checkMultiSig([
                ownerSig,
                oracleTxSig,
            ], [
                ownerPk,
                oraclePk,
            ]));
        }
    }
}
